# Humanode-Docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/scripts/: bump-artifacts.sh  detect-upstream-release.sh
.github/workflows/: test-and-publish.yml  upstream-release-watch.yml
bot/: pyproject.toml
bot/src/hmnd_bot/: __main__.py  bioauth.py  bioauth_url.py  commands.py  config.py  first_sync.py  logging.py  main.py  node.py  stall.py  state.py  tunnel.py
bot/tests/: test_bioauth.py  test_bioauth_url.py  test_config.py  test_first_sync.py  test_logging.py  test_node.py  test_stall.py  test_state.py  test_tunnel.py
ci/: rpc-contract-test.py  sync-test.sh
rootfs/: entrypoint.sh
rootfs/etc/ngrok/: policy.yml
rootfs/etc/s6-overlay/s6-rc.d/bot/: run
rootfs/etc/s6-overlay/s6-rc.d/node/: run
tests/image/: test_entrypoint_routing.sh  test_image_build.sh  test_insert_key.sh  test_seed_not_logged.sh
