[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmnd-bot"
version = "0.1.0"
description = "Telegram bioauth assistant for a Humanode validator"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4",
    "aiohttp>=3.9",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
